--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,12 +16,108 @@
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.story-null-1 {
+  width: 350px;
+  max-width: 500px;
+  height: 600px;
+  object-fit: cover;
+  object-position: center;
+  margin: 0px 30px;
+  border-radius: 20px;
+}
+
+.story-null-2 {
+  width: 300px;
+  max-width: 500px;
+  height: 450px;
+  object-fit: cover;
+  object-position: center;
+  margin: 0px 30px;
+  border-radius: 20px;
+}
+
+.story-null-1 img,
+.story-null-2 img,
+.story-focus img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  border-radius: 20px;
+}
+
+.story-null-1 video,
+.story-null-2 video,
+.story-focus video {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  object-position: center;
+  background-color: gray;
+  border-radius: 20px;
+}
+
+.story-focus video,
+.story-focus img {
+  margin-top: -5px;
+  border-radius: 20px;
+}
+
+.story-focus {
+  width: 550px;
+  height: 740px;
+  position: relative;
+  background-color: gray;
+  border-radius: 20px;
+}
+
+.story-counter {
+  display: flex;
+  position: relative;
+  top: 20px;
+}
+
+.story-counter .timer {
+  width: 100%;
+  height: 5px;
+  border-radius: 20px;
+  background-color: white;
+  margin: 0 10px;
+}
+
+.story-counter .timer-viewed {
+  width: 100%;
+  height: 5px;
+  border-radius: 20px;
+  background-color: red;
+  margin: 0 10px;
+}
+
+.story-counter .timer-active {
+  width: 100%;
+  height: 5px;
+  border-radius: 20px;
+  background-color: black;
+  margin: 0 10px;
+  display: flex;
+}
+
+.story-line {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.button-forward,
+.button-previous {
+  position: absolute;
+}
+
+.button-forward {
+  right: 0;
+}
+
+.button-previous {
+  left: 0;
 }
